syntax = "proto3";
option go_package = "github.com/styxx3542/tictactoe";
package tictactoe;

// Define the Tic-Tac-Toe service
service TicTacToeService {
    // Bi-directional streaming RPC for playing the game
    rpc PlayStream(stream PlayStreamRequest) returns (stream PlayStreamResponse) {}
}

message PlayStreamRequest {
    MoveRequest moveRequest = 1;
}

message PlayStreamResponse {
    string clientId = 1;
    BoardState boardState = 2;
}

message MoveRequest {
    string playerId = 1;
    int32 row = 2;
    int32 column = 3;
}

message BoardState{
    string message = 2;
    repeated string board= 3;
    bool gameOver = 4;
}
